--- a/documentation/SeminarBeispiel.tex
+++ b/documentation/SeminarBeispiel.tex
@@ -4,9 +4,7 @@
 \documentclass[ngerman]{seminarvorlage}
 % ngerman = Deutsch in neuer Rechtschreibung, alternativ english
 \usepackage{babel}[german] % automatische Sprachunterstützung
-\clubpenalty = 10000
-\widowpenalty = 10000
-\displaywidowpenalty = 10000
+
 \usepackage[utf8]{inputenc} % Kodierung der Non-ASCII-Zeichen
 \usepackage[T1]{fontenc} % Moderne Fonts, Trennung von Wörtern mit Umlauten
 \usepackage{cleveref} % für bequeme Referenzen, siehe \cref unten
@@ -30,7 +28,7 @@
 \maketitle% Titelangaben produzieren, aber kein Inhaltsverzeichnis, \tableofcontents funktioniert nicht!
 
 
-\abstract{In dieser Arbeit vergleichen wir binäre und nicht-binäre Serialisierungsformate mit dem Ziel, ihre Eignung für unterschiedliche Anwendungsbereiche zu evaluieren. Im Fokus stehen die Formate JSON, XML, ProtoBuf und MessagePack, die wir hinsichtlich ihrer Geschwindigkeit, Speicherbedarf und Wartbarkeit/Nutzbarkeit untersuchen. Durch eine Reihe von Tests und Analysen bewerten wir die Leistung der Formate in verschiedenen Szenarien und beleuchten deren Stärken und Schwächen. Darüber hinaus erörtern wir die jeweiligen Vor- und Nachteile in spezifischen Anwendungsgebieten, um eine fundierte Entscheidungsgrundlage für die Auswahl des passenden Serialisierungsformats in der Praxis zu bieten.}
+\abstract{In dieser Arbeit werden binäre und nicht-binäre Serialisierungsformate verglichen mit dem Ziel, ihre Eignung für diverse Anwendungsbereiche zu evaluieren. Im Fokus stehen die Formate JSON, XML, ProtoBuf und MessagePack, die hinsichtlich ihrer Geschwindigkeit, Speicherbedarf und Wartbarkeit/Nutzbarkeit untersuchet werden. Durch eine Reihe von Tests und Analysen wird die Leistung der Formate in verschiedenen Szenarien bewertet und  deren Stärken und Schwächen beleuchtet. Darüber hinaus werden die  jeweiligen Vor- und Nachteile in spezifischen Anwendungsgebieten erörtert, um eine Entscheidungsgrundlage für die Auswahl eines passenden Serialisierungsformats in der Praxis zu bieten.}
 
 \keywords{Serialisierung, JSON, XML, ProtoBuf, 
 MessagePack, Binär, Nicht-binäre,
@@ -47,7 +45,7 @@ Das folgende Kapitel beschäftigt sich mit grundlegenden Begriffen, die für das
 
 % Kurze Definition von Serialisierung und Deserialisierung
 \subsection{Serialisierung und Deserialisierung}
-Serialisierung bezeichnet den Prozess der Umwandlung komplexer Datenstrukturen oder Objekte in ein lineares Datenformat, das für die Speicherung oder Übertragung in verschiedenen Medien geeignet ist, wie beispielsweise Dateien oder Netzwerkprotokolle. Deserialisierung hingegen beschreibt den Vorgang, bei dem das lineare Datenformat analysiert und in die ursprüngliche Datenstruktur oder das objektorientierte Repräsentationsmodell zurückgeführt wird. Diese Prozesse sind essenziell für die Persistenz von Daten und die Kommunikation zwischen verteilten Systemen.
+Serialisierung bezeichnet den Prozess der Umwandlung komplexer Datenstrukturen oder Objekte in ein lineares Datenformat, das für die Speicherung oder Übertragung in verschiedenen Medien geeignet ist, wie beispielsweise Dateien oder Netzwerkprotokolle. Deserialisierung hingegen beschreibt den Vorgang, bei dem das lineare Datenformat analysiert und in die ursprüngliche Datenstruktur zurückgeführt wird. Diese Prozesse sind essenziell für die Persistenz von Daten und die Kommunikation zwischen verteilten Systemen.
 
 \subsection{Binäre vs. Nicht-Binäre Formate}
 Binäre und nichtbinäre Serialisierungsformate unterscheiden sich grundlegend in der Art und Weise, wie sie Daten speichern und übertragen. Binäre Formate wie Protobuf oder MessagePack codieren Daten in einem kompakten, maschinenlesbaren Format, was ihnen eine hohe Effizienz sowohl hinsichtlich der Speichernutzung als auch der Verarbeitungsgeschwindigkeit verleiht. Diese Formate sind ideal für Systeme, in denen Performance eine zentrale Rolle spielt, wie bei der Kommunikation zwischen Microservices oder in Anwendungen mit begrenzter Bandbreite. Ein Nachteil dieser Formate ist jedoch, dass sie nicht von Menschen direkt gelesen werden können. Dies bedeutet, dass spezielle Tools oder Software nötig sind, um den Inhalt zu interpretieren, was die Fehlersuche und das Debuggen erschweren kann.
@@ -295,7 +293,7 @@ Protobuf brachte ebenfalls spezifische Schwierigkeiten mit sich. Die ineffizient
 
 Ein weiteres Problem betrifft die Limitierungen von Python selbst. Bei JSON-Strukturen mit einer Tiefe von mehr als 100 Ebenen führten die zahlreichen Rekursionsaufrufe dazu, dass Python die Verarbeitung mit einem Fehler abbrach. Dieses Problem ließ sich nicht durch eine Erhöhung der maximalen Rekursionstiefe beheben. Ähnliche Probleme traten auch bei Protobuf auf, das mit Datenstrukturen, die mehr als 50 Ebenen tief waren, nicht korrekt umgehen konnte. In diesen Fällen war die Serialisierung fehlerhaft, und die Deserialisierung konnte nicht erfolgreich abgeschlossen werden.
 
-Einzig und allein MessagePack war ein Protokoll das keine Limitationen oder Probleme aufwies.
+Einzig und allein MessagePack wies keine bekannten / offensichtlichen Limitationen oder Probleme auf.
 
 Diese Einschränkungen zeigen die praktischen Herausforderungen bei der Verwendung von Python und bestimmten Serialisierungsformaten in ressourcenintensiven Szenarien auf. Sie unterstreichen die Bedeutung einer angepassten Implementierung und realistischen Bewertung der Verfahren unter Berücksichtigung ihrer spezifischen Eigenheiten.
 
@@ -430,7 +428,7 @@ Im folgenden wurden alle Messeregebnisse normalisiert und ein Durschnitt erfasst
     \resizebox{\columnwidth}{!}{% Adjust to fit column width
     \begin{tabular}{|l|l|l|l|l}
     \cline{1-4}
-    \textbf{Protokoll} & \textbf{Serialisierung} & \textbf{Deserialisierung} & \textbf{Kompression} &  \\ \cline{1-4}
+    \textbf{Format} & \textbf{Serialisierung} & \textbf{Deserialisierung} & \textbf{Kompression} &  \\ \cline{1-4}
     JSON               & 7.858018                & 4.026984                  & 0.224557               &  \\ \cline{1-4}
     MessagePack        & 5.909328                & 2.354893                  & 0.205478               &  \\ \cline{1-4}
     ProtoBuf           & 1.665640                & 1.915003                  & 0.106578               &  \\ \cline{1-4}
@@ -439,15 +437,19 @@ Im folgenden wurden alle Messeregebnisse normalisiert und ein Durschnitt erfasst
     \caption{Relative Performance von Rust gegenüber Python}
 \end{table}
 
+\newpage
+
 Python zeigt in der Kompression durchweg bessere Ergebnisse als Rust. Dies liegt daran, dass Python-Objekte im Speicher eine vergleichsweise große Größe aufweisen, was dazu führt, dass die Daten nach der Serialisierung stärker komprimiert erscheinen. In der Serialisierungs- und Deserialisierungsgeschwindigkeit hingegen übertrifft Rust Python deutlich. Dies ist auf die native Kompilierung von Rust und die damit verbundene Optimierung auf niedriger Ebene zurückzuführen, wodurch Serialisierungsbibliotheken effizienter arbeiten können. Die Ergebnisse verdeutlichen, dass Rust besonders in Szenarien mit hohen Anforderungen an die Verarbeitungsgeschwindigkeit Vorteile bietet, während Python durch seine Speicherrepräsentation eine effektivere Kompression erreicht.
 
-Wenn man auf die einzelnen Protokolle schaut, sieht man allerdings, dass gerade die binären Protokolle nicht so stark profitieren von der Sprachimplementierung wie die nicht-binären JSON und XML.
+Wenn man auf die einzelnen Serialisierungsformate schaut, sieht man allerdings, dass gerade die binären Formate nicht so stark profitieren von der Sprachimplementierung wie die nicht-binären JSON und XML.
 
 \subsection{Ressourcenverbrauch}
 Die Ergebnisse zeigen, dass XML im Vergleich der getesteten Formate den höchsten Ressourcenverbrauch aufweist. Insbesondere bei großen Objekten ist der Speicherbedarf exorbitant: Ein 2-GB-Objekt führte zu einem Speicherverbrauch von über 32 GB in der verwendeten Implementierung, sowohl in Python als auch in Rust. Dies macht XML für speicherintensive Anwendungen unpraktisch, insbesondere in ressourcenbeschränkten Umgebungen wie Embedded-Systemen oder IoT-Geräten. JSON zeigte sich als moderat und benötigte etwa den gleichen Speicherplatz des originalen Objekts, was auf die Textstruktur des Formats zurückzuführen ist. MessagePack erwies sich als das ressourcenschonendste Format: Es war nicht nur das schnellste, sondern erzeugte auch keine signifikanten Ausschläge im Ressourcenmonitor. Damit eignet es sich hervorragend für Systeme, bei denen geringe Latenz und niedriger Speicherverbrauch essenziell sind, beispielsweise in Echtzeitanwendungen oder mobilen Geräten. Protobuf zeigte einen ähnlichen Ressourcenverbrauch wie JSON, mit einer tendenziell geringeren Speicherbelastung. Es bietet damit eine gute Balance zwischen Effizienz und Flexibilität, insbesondere in leistungsorientierten Anwendungen wie der Kommunikation zwischen Microservices.
 
 \subsection{Nutzbarkeit / Wartbarkeit}
 In Bezug auf Nutzbarkeit und Wartbarkeit erwiesen sich MessagePack und JSON als die angenehmsten Formate. Beide ermöglichen eine dynamische Serialisierung und Deserialisierung von Objekten ohne zusätzliche Konfigurationsschritte, was die Entwicklung deutlich vereinfacht. JSON bietet dabei den zusätzlichen Vorteil, dass es in nahezu allen gängigen Programmiersprachen nativ unterstützt wird, wodurch Daten direkt inspiziert und debuggt werden können. MessagePack glänzt durch seine Effizienz und Einfachheit, allerdings führt die Community-Driven-Entwicklung dazu, dass für manche Programmiersprachen mehrere Implementierungen existieren. Diese können sich in ihrer Entwicklungsgeschwindigkeit und Funktionsweise unterscheiden, was langfristig potenzielle Kompatibilitätsprobleme oder Mehraufwand bei der Auswahl einer geeigneten Implementierung bedeuten könnte.
+
+\newpage
 
 XML und Protobuf hingegen erfordern einen größeren Implementierungsaufwand. Bei XML müssen Serialisierungs- und Deserialisierungsfunktionen implementiert werden, wobei verschiedene Bibliotheken zur Verfügung stehen, die unterschiedliche Funktionalitäten und Erweiterungen bieten. Diese Fragmentierung kann in der Entwicklung zusätzliche Entscheidungen und Abwägungen erfordern. Protobuf arbeitet mit einer vorab definierten .proto-Datei, die eine klare Struktur vorgibt und die langfristige Wartbarkeit in großen Projekten verbessert. Diese Standardisierung vermeidet inkompatible Implementierungen zwischen verschiedenen Sprachen, bietet jedoch weniger Flexibilität im Vergleich zu JSON oder MessagePack. Zudem erfordert die Arbeit mit Protobuf Erfahrung im Umgang mit Schema-Design, um eine optimale Datenstruktur zu gewährleisten. Python stößt bei der Arbeit mit tief verschachtelten Strukturen an Grenzen, was den Implementierungsaufwand für generische Lösungen zusätzlich erhöht.
 
@@ -471,7 +473,7 @@ MessagePack überzeugte in den Tests durch seine herausragende Performance und d
 Protobuf zeigte in den Tests gute Ergebnisse bei der Kompression und Serialisierungszeit, insbesondere bei einfacheren Datensätzen. Für komplexe Strukturen nahm die Laufzeit jedoch spürbar zu, was die Effizienz im Vergleich zu MessagePack etwas beeinträchtigte. Seine strikte Typisierung und die Nutzung von Schema-Dateien (.proto) machen Protobuf besonders für stark typisierte Anwendungen attraktiv, wie sie in Microservices-Architekturen häufig vorkommen. Diese Ergebnisse decken sich mit der Studie von Nate \cite{Nate10_2024}, die Protobuf für Websockets hinsichtlich Effizienz und Strukturierung als eine der besten Optionen bewertet hat. Protobuf bleibt eine ausgezeichnete Wahl für Systeme, die auf klar definierte Strukturen und effiziente Datenübertragung angewiesen sind.
 
 \subsection{XML}
-XML ist ein langsames und schwierig aufzusetzendes Format. Als es erschaffen wurde hat es einige Probleme gelöst doch über die Jahre wurden für viele Probleme spezialisierte Lösungen geschaffen die deutlich effizienter sind als XML. Auch in den hier durchgeführten Testreihen hat sich die allgemeine Komplexität als auch ein sehr hoher Ressourcenverbrauch deutlich gezeigt \cite{Pommerenig_2019}. XML wird meist noch noch für Legacy Projekte verwendet doch in Bereichen der Datenübertragung oder in modernen Webanwendungen haben andere Protokolle meist die Oberhand.
+XML ist ein langsames und schwierig aufzusetzendes Format. Als es erschaffen wurde hat es einige Probleme gelöst doch über die Jahre wurden für viele Probleme spezialisierte Lösungen geschaffen die deutlich effizienter sind als XML. Auch in den hier durchgeführten Testreihen hat sich die allgemeine Komplexität als auch ein sehr hoher Ressourcenverbrauch deutlich gezeigt \cite{Pommerenig_2019}. XML wird meist noch noch für Legacy Projekte verwendet doch in Bereichen der Datenübertragung oder in modernen Webanwendungen haben andere Serialisierungsformate meist die Oberhand.
 
 
 \section{Ausblick}
